[project]
name = "mp-senet-upgrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.12"
dependencies = [
    "joblib>=1.5.3",
    "numpy>2",
    "pesq>=0.0.4",
    "rich>=14.3.2",
    "ruff>=0.15.0",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchcodec>=0.10.0",
    "pyyaml>=6",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.8",
    "transformers>=5.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "W", "RUF"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
